<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/topBackgroung"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_300sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:fontFamily="@font/saira_condensed"
        android:text="@string/meine_zahlungen"
        android:textColor="@color/fiolet"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintStart_toStartOf="@+id/topBackgroung"
        app:layout_constraintTop_toTopOf="@+id/topBackgroung" />

    <TextView
        android:id="@+id/lega_fest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/saira_condensed_semi_bold"
        android:text="@string/lege_fest_an"
        android:textColor="@color/dark"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintEnd_toEndOf="@+id/topBackgroung"
        app:layout_constraintStart_toStartOf="@+id/tvH2"
        app:layout_constraintTop_toBottomOf="@+id/tvH2" />


    <ImageView
        android:id="@+id/navIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/centeredAlledText"
        android:layout_width="0dp"
        android:layout_height="@dimen/_160sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="@+id/topBackgroung"
        app:layout_constraintStart_toStartOf="@+id/topBackgroung"
        app:layout_constraintTop_toBottomOf="@+id/lega_fest"
        app:strokeWidth="0dp">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_margin="@dimen/_15sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/note_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:text="@string/zu_deinem"
                android:textSize="@dimen/_14ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/tvMietzahlung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:fontFamily="@font/saira_condensed_semi_bold"
        android:text="@string/mietzahlung_am"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/centeredAlledText" />

    <com.side.effects.metafronttask.views.DayPicker
        android:id="@+id/dayPicker"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvMietzahlung" />

    <TextView
        android:id="@+id/tvAbbuchung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/saira_condensed_semi_bold"
        android:text="@string/abbuchung_am"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dayPicker" />

    <com.side.effects.metafronttask.views.DayPicker
        android:id="@+id/dayPicker2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvAbbuchung" />

    <!--I am not working on the tab layout beacause
     task discriotion it was not mentioned and secondly
      It can be adjusted according the fragments and further
       design-->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>